--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
+<head>
+    <link rel="stylesheet2" href="style.css" />
+</head>
+
+
 <h1>hedding 1(表題1)</h1>
 <h2>hedding 2(表題2)</h2>
 <h3>hedding 3(表題3)</h3>
 <h4>hedding 4(表題4)</h4>
 <p>これは文章です</p>
+
+
+<h1>infomation-training</h1>
+<h2>githubとは？</h2>
+<strong>プログラムのバージョン管理アプリ</strong>
+<P>プログラム逐次覚えておいて、それをいつでも見直すことができる</P>
+
+<h2>利点</h2>
+<ul>
+    <li>バージョン管理が簡単にできる</li>
+    <li>共同編集が可能になる</li>
+
+</ul>
+
+<ol>
+    <li>aiueo</li>
+</ol>
